added winCondition and clearBoard function

--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
             <div id="sBtnContainer">
               <button id="startBtn">Start!</button>
             </div>
-        <div id="board">
+            </div>
+          <div id ="topHalf">
+            <div id="player1Display" class="player1DisplayBefore">
+              <div id="player1Name">
+                player 1 name
+              </div>
+              <div id = player1Score>
+                TEST
+              </div>
+            </div>
+          <div id="board" class="boardBefore">
             <div class="spot" id="spot1"> </div>
             <div class="spot" id="spot2"> </div>
             <div class="spot" id="spot3"> </div>
@@ -29,8 +39,23 @@
             <div class="spot" id="spot7"> </div>
             <div class="spot" id="spot8"> </div>
             <div class="spot" id="spot9"> </div>
+          </div>
+        <div id="player2Display" class="player2DisplayBefore">
+          <div id="player2Name">
+            player 2 name
+          </div>
+          <div id = player2Score>
+              TEST
+          </div>
+          
         </div>
+      </div>
+      <div id="bottomHalf">
+
+      </div>
+
     </body>
-    <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="script.js"></script>
+    
 </html>
